# Nudny-Silnik-2d

./: CMakeLists.txt  README.md  ns2d.hpp
box2d/include/: b2dPhysics.h
box2d/src/: b2dPhysics.cpp
core/include/: App.h  GameState.h  GameStateFactory.h  Interfaces.h  KeyMap.h  Keyboard.h  Physics.h  Queue.h  Resource.h  Resources.h
core/src/: App.cpp  AppConfig.cpp  Camera.cpp  Config.cpp  GameState.cpp  Input.cpp  Keyboard.cpp  Queue.cpp  Resources.cpp
doc/html/: annotated.html  classes.html  dir_067a2e848cb164b3ef63849bb34984e4.html  dir_08adc7350d3da801c6dd02a7623214f4.html  dir_18c9fb4b0aea74960561d0b86f688cbe.html  dir_1f611fedbaa1d72e8de50e4de52033b9.html  dir_2316068a7735a9d7269db9535a8a7512.html  dir_26021ca8c7d7499f03a38adfb76a88ec.html  dir_273a8b6f1a2b12d7373d49d977c852f2.html  dir_2e8ba89a2793ac106d46a524b66f40ab.html  dir_316b4d9c56a60788757054d06ff4cc99.html  dir_35af05d0340fff8980165bc6dfaedcad.html  dir_43953a6c07eb42fbc1710c0ec7b1a82a.html  dir_4481e5a0b6dca4ad4ee9c75d9dd6f431.html  dir_481db2b34d882877f981fe4f1ac03a79.html  dir_552bc8770aadec74babea8c480e03d73.html  dir_6a4873365a6959d664b1831477f562e4.html  dir_77210cc40129415665111ab58d4382e1.html  dir_82ae5e6f7fb2af06f1eb73e9f62f84fd.html  dir_8c9cb2ca00bbd7f365d8e284356fa82a.html  dir_a5c6eb0e50ddaced8486bcfffdbfd460.html  dir_abc9d9286687d556a5084d4371f2e4cb.html  dir_b2de478a8c579d29dcdb874c729d38b6.html  dir_b4fccf2e10abd580f8e6fcb657d916f7.html  dir_b5552ef733b9381edca6405476adddd4.html  dir_b7481603905ee012b54b7f8296cae371.html  dir_c39abd8517760ccc26a009301efc013f.html  dir_c8de777bae60324b52976118fcbaecd7.html  dir_ef6ac975a7e73d3db86bd9e8a1c34134.html  dir_f04c9b804bffe54c63799415212d194c.html  dir_f1d7631b68e49eb1df0b15d4847eba61.html  dir_fa6a18e221c2f84f79c1e44fba170610.html  doxygen_crawl.html  examples.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  (+55 more)
doc/latex/: annotated.tex  examples.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
game/include/: Entity.h  EntityFactory.h  GameStateCinematic.h  GameStateMainMenu.h  GameStatePlay.h  GameStatePlaySidescroll.h  Map.h  MapCollisionLayer.h  MapDecorationLayer.h  MapEntityLayer.h  MapImageLayer.h  MapLayer.h  MapTileLayer.h  World.h
game/src/: Body.cpp  Entity.cpp  GameState.cpp  GameStateCinematic.cpp  GameStateMainMenu.cpp  GameStatePlay.cpp  GameStatePlaySidescroll.cpp  Hud.cpp  Map.cpp  MapCollisionLayer.cpp  MapDecorationLayer.cpp  MapEntityLayer.cpp  MapImageLayer.cpp  MapLayer.cpp  MapTileLayer.cpp  Physic.cpp  World.cpp
graph/src/: Adapter.cpp  Circle.cpp  Polygon.cpp  Rectangle.cpp  Text.cpp
silnik/: CMakeLists.txt
silnik/core/: CMakeLists.txt
silnik/core/include/: App.h  GameState.h  GameStateFactory.h  Interfaces.h  JSONLoader.h  KeyMap.h  Keyboard.h  Log.h  Resource.h  Resources.h  State.h  StateFactory.h  Tool.h
silnik/core/include/20240411-BACKUP/: App.h  Game.h  GameState.h
silnik/core/include/20240413 - BACKUP/: GameContext.h  GameState.h
silnik/core/include/nudny/silnik/: Core.h
silnik/core/src/: App.cpp  JSONLoader.cpp  Keyboard.cpp  Log.cpp  Resources.cpp
silnik/core/src/20240411-BACKUP/: App.cpp  Game.cpp  GameState.cpp
silnik/core/tests/: CMakeLists.txt  Interfaces_Test.cpp
silnik/game/: CMakeLists.txt
silnik/game/include/: Actor.h  ActorInterfaces.h  Enemy.h  EnemyState.h  EntityFactory.h  EntityState.h  Inventory.h  Item.h  Map.h  MapLayer.h  Player.h  PlayerState.h
silnik/game/include/nudny/silnik/: Game.h
silnik/game/src/: Actor.cpp  Map.cpp  MapLayer.cpp  Player.cpp  PlayerState.cpp
silnik/visual/: CMakeLists.txt
silnik/visual/include/: Animation.h  Body.h  Circle.h  Entity.h  Model.h  Poly.h  Rect.h  Shape.h  Sprite.h  Text.h  Tileset.h
silnik/visual/include/nudny/silnik/: Visual.h
silnik/visual/src/: Animation.cpp  Body.cpp  Circle.cpp  Entity.cpp  Model.cpp  Poly.cpp  Rect.cpp  Shape.cpp  Sprite.cpp  Text.cpp  Tileset.cpp
tiled/include/: TiledLayerLoader.h  TiledLoader.h  TiledMapLoader.h  tlObject.h  tldCircle.h  tldEntityFactory.h  tldMap.h  tldMapCollisionLayer.h  tldMapDecorationLayer.h  tldMapEntityLayer.h  tldMapImageLayer.h  tldMapLayer.h  tldMapTileLayer.h  tldPolygon.h  tldRectangle.h  tldShapeFactory.h  tldSprite.h  tldSpriteAnimation.h  tldTileset.h  tldUtils.h  tldWorld.h
tiled/src/: tldMap.cpp  (+19 more)
(+1352 files in other folders)
